# TP_MLops

./: .bandit.yaml  .coverage  .env  .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  app.py  requirements.txt
backend/storage/: s3_client.py
frontend/: Dockerfile  app.py
scripts/: upload_model_to_minio.py
src/ml_olist/common/: features.py
src/ml_olist/prediction/: schemas.py
src/ml_olist/training/: data.py  features.py  train.py
tests/: test_data.py  test_features.py  test_predict.py  test_project_structure.py
