[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "olist-mlops"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E","W","F","I","B","S","NPY","PD"]
ignore  = ["S101","S603"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts   = "-v --tb=short --cov=src --cov-report=term-missing"
